Bug 121417 - KDE5: Recent Documents -> Clear list leads to crash
Summary: KDE5: Recent Documents -> Clear list leads to crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords:
: 120455 120789 120881 120882 120890 (view as bug list)
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2018-11-14 13:08 UTC by Vera Blagoveschenskaya
Modified: 2018-12-14 13:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vera Blagoveschenskaya 2018-11-14 13:08:28 UTC
Description:
Recent Documents -> Clear list leads to crash

Steps to Reproduce:
1. Preform steps from Bug 120789
2. Perform steps from Bug 120789 once again


Actual Results:
LO crashes

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
gdb backtrace log will be a bit later
Comment 1 Vera Blagoveschenskaya 2018-11-14 13:13:22 UTC
Reproduced for 
 
Version: 6.2.0.0.alpha1+
Build ID: 85dba18a3d3644a4ac49bd32ea106a4d69159fb4
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-13_23:14:30
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Michael Weghorn 2018-11-14 14:27:33 UTC
Confirmed with

Version: 6.2.0.0.alpha1+
Build ID: 1b50fa88b148739a7b192ba70f08af2c6e326fd2
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: kde5; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2018-11-19 12:20:26 UTC
Still reproduced in

Version: 6.2.0.0.beta1
Build ID: d1b41307be3f8c19fe6f1938cf056e7ff1eb1d18
CPU threads: 1; OS: Linux 4.15; UI render: default; VCL: kde5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

increasing severity...
Comment 4 Katarina Behrens (Inactive) 2018-11-23 10:01:02 UTC
*** Bug 120789 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2018-11-23 11:27:14 UTC
Aleksei Nikiforov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/bc023edb6a8c9d4179ce18b1f6cec990d0107201%5E%21

tdf#121417 Allow dynamic menu changes for Qt5 and KDE5 interfaces

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Vera Blagoveschenskaya 2018-11-27 08:21:27 UTC
Hello all,
I can't find the build with fix.

The latest build here is 18.11.2018
https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF/current/

Please help!
Comment 7 Michael Weghorn 2018-11-27 14:25:07 UTC
(In reply to Vera Blagoveschenskaya from comment #6)
> Hello all,
> I can't find the build with fix.
> 
> The latest build here is 18.11.2018
> https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF/
> current/
> 
> Please help!

Hopefully, new daily builds will show up again soon. Discussion on #libreoffice-dev IRC channel today:

> [15:17] <michaelweghorn> cloph_away: is there any issues with the x86_64 tinderboxes?
> [15:17] <michaelweghorn> cloph_away:  the tb status page suggests they have not been building for ~1 week, and the corresponding daily builds are the same age
> [15:19] <cloph_away> there has been some maintenance ongoing (git repack, updates and the like) that took a while, apparently forgot to reenable master after that)
> [15:20] <michaelweghorn> cloph_away: ah ok, thx for the info
Comment 8 Vera Blagoveschenskaya 2018-11-27 14:30:35 UTC
Michael,
Thx for this information! So, just waiting.
Comment 9 Katarina Behrens (Inactive) 2018-11-28 11:52:32 UTC
*** Bug 120455 has been marked as a duplicate of this bug. ***
Comment 10 Katarina Behrens (Inactive) 2018-11-28 12:07:39 UTC
W/ master build as of today, after clicking on Recent documents > Clear list, I do get some funny pop-up saying that 'this operation is not supported by operating system' but 1) no crash 2) the list is cleared
Comment 11 Katarina Behrens (Inactive) 2018-11-28 12:56:51 UTC
*** Bug 120881 has been marked as a duplicate of this bug. ***
Comment 12 Michael Weghorn 2018-11-28 16:05:17 UTC
(In reply to Katarina Behrens (CIB) from comment #10)
> W/ master build as of today, after clicking on Recent documents > Clear
> list, I do get some funny pop-up saying that 'this operation is not
> supported by operating system' but 1) no crash 2) the list is cleared

Same here. Should that be handled in a separate (new) bug report then?
Comment 13 Michael Weghorn 2018-11-28 16:12:14 UTC
*** Bug 120882 has been marked as a duplicate of this bug. ***
Comment 14 Michael Weghorn 2018-11-28 16:14:28 UTC
*** Bug 120890 has been marked as a duplicate of this bug. ***
Comment 15 Katarina Behrens (Inactive) 2018-11-28 17:28:23 UTC
> > W/ master build as of today, after clicking on Recent documents > Clear
> > list, I do get some funny pop-up saying that 'this operation is not
> > supported by operating system' but 1) no crash 2) the list is cleared
> 
> Same here. Should that be handled in a separate (new) bug report then?

I would say so, but ultimately something for QA to decide. I'd at least decrease prio, the popup is just a minor annoyance compared to crash
Comment 16 Michael Weghorn 2018-11-28 18:14:13 UTC
(In reply to Vera Blagoveschenskaya from comment #8)
> Michael,
> Thx for this information! So, just waiting.

@Vera:
New daily builds are available now, e.g. at https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF/
Comment 17 Vera Blagoveschenskaya 2018-11-29 06:58:13 UTC
Tested with

Version: 6.3.0.0.alpha0+
Build ID: b15b1a2a90fa4c239ff8a6a33e73ff50ea422abf
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-28_06:21:05
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

No crash appears.
But I have the same result as described in
https://bugs.documentfoundation.org/show_bug.cgi?id=121417#c10

Well, I think it's better to close this bug with crash and to create a new one, because 'this operation is not supported by operating system' appears also for kde4, gtk3.

Thanks to @all !
Comment 18 Vera Blagoveschenskaya 2018-11-29 07:04:53 UTC
New bug:
https://bugs.documentfoundation.org/show_bug.cgi?id=121780

This bug -> status 'Verified'
Comment 19 Commit Notification 2018-12-14 13:29:02 UTC
Aleksei Nikiforov committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/517af5bbd0cd659f09afd33a80f0d6c72016fafe%5E%21

tdf#121417 Allow dynamic menu changes for Qt5 and KDE5 interfaces

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.