vcl/inc/qt5/Qt5Menu.hxx
@@ -12,6 +12,7 @@
 #include <salmenu.hxx>
 
 class MenuItemList;
+class QActionGroup;
 class QMenu;
 class QMenuBar;
 class Qt5MenuItem;
@@ -27,9 +28,13 @@ private:
     Qt5Frame* mpFrame;
     bool mbMenuBar;
     QMenuBar* mpQMenuBar;
+    QMenu* mpQMenu;
+    QActionGroup* mpQActionGroup;
 
     void DoFullMenuUpdate(Menu* pMenuBar, QMenu* pParentMenu = nullptr);
     static void NativeItemText(OUString& rItemText);
+
+    QMenu* InsertMenuItem(Qt5MenuItem* pSalMenuItem, unsigned nPos);
 
 public:
     Qt5Menu(bool bMenuBar);
@@ -64,12 +69,15 @@ Q_SIGNALS:
 
 private slots:
     static void slotMenuTriggered(Qt5MenuItem* pQItem);
+    static void slotMenuAboutToShow(Qt5MenuItem* pQItem);
+    static void slotMenuAboutToHide(Qt5MenuItem* pQItem);
 };
 
 class Qt5MenuItem : public SalMenuItem
 {
 public:
     Qt5MenuItem(const SalItemParams*);
+    virtual ~Qt5MenuItem() override;
 
     Qt5Menu* mpParentMenu; // The menu into which this menu item is inserted
     Qt5Menu* mpSubMenu; // Submenu of this item (if defined)
